# SMPC-for-Renewable-Energy-Microgrid

./: README.md  pyproject.toml  smpc.ipynb  smpc.py
