[project]
name = "renewables-smpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cvxpy>=1.6.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pymc>=5.22.0",
    "tqdm>=4.67.1",
]
